--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.16.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
