--- a/server/package.json
+++ b/server/package.json
@@ -16,12 +16,14 @@
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
     "mongoose": "^6.0.8",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.16.0",
+    "@types/validator": "^13.7.15",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
