--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^8.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.1.4",
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
