--- a/client/package.json
+++ b/client/package.json
@@ -40,5 +40,6 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "styled-components": "^5.3.9"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
