--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.3.6",
     "cra-template-typescript": "1.2.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
