--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
     "validator": "^13.9.0"
