--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,8 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "typescript": "^5.0.4"
   },
   "proxy": "http://localhost:5000"
 }
